syntax = "proto3";
package inner.inner;

import "common/common.proto";

option java_multiple_files = false;
option java_package = "com.example.proto.inner.inner";
option java_outer_classname = "Inner";

message GetNodeAddresssReq {
    // nul
}

message GetNodeAddresssResp {
    // 结果
    common.common.ErrorMsg ret = 1;
    // ip
    string host = 2;
    // port
    string port = 3;
}

service ConnectorService {
    // 获取可用的connector节点信息
    rpc GetNodeAddress (GetNodeAddresssReq) returns (GetNodeAddresssResp);
}